Added config to generate exe build