@@ -149,6 +149,46 @@
           </archive>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.akathist.maven.plugins.launch4j</groupId>
+        <artifactId>launch4j-maven-plugin</artifactId>
+        <version>1.7.21</version>
+        <executions>
+          <execution>
+            <id>l4j-clui</id>
+            <phase>verify</phase>
+            <goals><goal>launch4j</goal></goals>
+            <configuration>
+              <headerType>console</headerType>
+              <outfile>target/javascan.exe</outfile>
+              <jar>${project.build.directory}/${project.build.finalName}.${project.packaging}</jar>
+              <errTitle>${project.name}</errTitle>
+              <classPath>
+                <mainClass>info.boaventura.scan.Main</mainClass>
+                <addDependencies>false</addDependencies>
+                <preCp>anything</preCp>
+              </classPath>
+              <jre>
+                <minVersion>1.8.0</minVersion>
+                <opts>
+                  <opt>-Djava.endorsed.dirs=./endorsed</opt>
+                </opts>
+              </jre>
+              <versionInfo>
+                <fileVersion>1.0.0.0</fileVersion>
+                <txtFileVersion>1.0.0.0</txtFileVersion>
+                <fileDescription>Console to search over a jar files</fileDescription>
+                <copyright>GNU</copyright>
+                <productVersion>1.0.0.0</productVersion>
+                <txtProductVersion>1.0.0.0</txtProductVersion>
+                <productName>Java Scan</productName>
+                <internalName>javascan</internalName>
+                <originalFilename>${project.build.finalName}.exe</originalFilename>
+              </versionInfo>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
